--- a/public/styles.css
+++ b/public/styles.css
@@ -265,7 +265,7 @@ x-peer[transfer] x-icon {
 }
 
 x-peer[transfer] .status:before {
-    content: 'Transferring...';
+    content: '送信中…';
 }
 
 x-peer:not([transfer]) .status,
