--- a/public/styles.css
+++ b/public/styles.css
@@ -675,6 +675,10 @@ screen and (min-width: 1100px) {
 }
 
 @media (max-height: 420px) {
+    .open-message{
+        font-size: 20px;
+    }
+
     x-instructions {
         top: 24px;
     }
